test/invalid/array1.anf
mod array1 {
    val a = [1, 2; 3]
}
